modif base de donner

--- a/src/Meeting/views/index.twig
+++ b/src/Meeting/views/index.twig
@@ -19,7 +19,7 @@
         <tr>
       <td>
 
-          {{ meeting.nom }}
+          {{ meeting.titre }}
         </a>
       </td>
             <td>
